# VaultVizier

./: .gitignore  CMakeLists.txt  README.md  VaultVizier_Project_Report.docx
src/: main.cpp
src/classes/: AuthUser.cpp  AuthUser.hpp  Doctor.cpp  Doctor.hpp  Equipment.cpp  Equipment.hpp  GlobalVars.cpp  GlobalVars.hpp  Patient.cpp  Patient.hpp  Request.cpp  Request.hpp
src/components/: CreateAcc.cpp  Dashboard.cpp  DoctorDashboard.cpp  Login.cpp  components.cpp  components.hpp
